--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.3",
+    "multer": "^1.4.2",
     "node-sessionstorage": "^1.0.0",
     "nodemon": "^2.0.6",
     "sequelize": "^6.3.5"
